[package]
name = "Excel-Handler"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-files = "0.6.6"  # For file redenring
actix-multipart = "0.7.2"
chrono = "0.4.39"
zip = "2.2.2"
calamine = { version="0.26.1", features = ["chrono", "dates"] } # For reading Excel files
xlsxwriter = "0.6.1" # For writing Excel files
tokio = { version = "1.43.0", features = ["full"] } # For async file operations
futures = "0.3.31" # For async streams
serde = { version = "1.0.217", features = ["derive"] } # For JSON serialization
serde_json = "1.0.138"
futures-util = "0.3.31" # For JSON responses
rayon = "1.10.0"
postcard = { version = "1.1.1", features = ["use-std"] }